Fix SCSS variable interpolations in `calc`
After 013b7780f4ec0de7106fa450d3341dcd36ca49c8, we now use `calc` for some expressions. For some reason, with certain versions of dependencies (`liquid == 4.0.3`?) this correctly expands the variables inside `calc`, but, after updating dependencies, it no longer does so (and this has started happening inside Github Actions as well). This manifested as the styles being broken on the deployed website, but not locally (even after cleaning).

The documentation claims that it should already work inside `calc`: https://sass-lang.com/documentation/values/calculations/

Yet there are remarks explaining that you need to interpolate the value as a string: https://stackoverflow.com/a/76875725/344643

And, in fact, there are already such interpolations in the code (presumably copied from a template a long time ago):

```
        max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
        max-width:         calc(#{$content-width} - (#{$spacing-unit}));
```

So who knows?

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -45,7 +45,7 @@
     @include media-query($on-palm) {
         position: absolute;
         top: 9px;
-        right: calc($spacing-unit / 2);
+        right: calc(#{$spacing-unit} / 2);
         background-color: $background-color;
         border: 1px solid $grey-color-light;
         border-radius: 5px;
@@ -120,14 +120,14 @@
 .footer-col-wrapper {
     font-size: 15px;
     color: $grey-color;
-    margin-left: calc(-1 * $spacing-unit / 2);
+    margin-left: calc(-1 * #{$spacing-unit} / 2);
     @extend %clearfix;
 }
 
 .footer-col {
     float: left;
-    margin-bottom: calc($spacing-unit / 2);
-    padding-left: calc($spacing-unit / 2);
+    margin-bottom: calc(#{$spacing-unit} / 2);
+    padding-left: calc(#{$spacing-unit} / 2);
 }
 
 .footer-col-1 {
